feat(frame): implement typed local relational foundation